# osc-transformer-based-extractor

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  README.rst  a  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  yamllint_hook.py
.github/workflows/: bootstrap.yaml  dependencies.yaml  documentation.yaml  linting.yaml  release.yaml  verify.yaml
_modules/: index.html
_modules/osc_transformer_based_extractor/: fine_tune.html  inference.html  make_training_data_from_curator.html
_sources/api/: modules.rst.txt  osc_transformer_based_extractor.kpi_detection.rst.txt  osc_transformer_based_extractor.relevance_detector.rst.txt  osc_transformer_based_extractor.rst.txt
api/: modules.html  osc_transformer_based_extractor.html  osc_transformer_based_extractor.kpi_detection.html  osc_transformer_based_extractor.relevance_detector.html
docs/notebooks/: train_sentence_transformer.ipynb
src/osc_transformer_based_extractor/: README.md  cli.py  fine_tune.py  inference.py  main.py  make_training_data_from_curator.py
src/osc_transformer_based_extractor/kpi_detection/: cli_kpi_detection.py  inference_kpi_detection.py  train_kpi_detection.py
src/osc_transformer_based_extractor/relevance_detector/: cli_relevance_detector.py  fine_tune.py  inference.py
src/package/osc-transformer-based-extractor/: README.md  pyproject.toml
src/package/osc-transformer-based-extractor/osc_transformer_based_extractor/: __init__.py  main.py
src/package/osc-transformer-based-extractor/tests/: __init__.py
src/pytests/: a.ipynb  tess.py  test_fine_tune.py  test_fine_tune2.py
src/pytests/src/PYTESTS/testing_data/: valid_curator_data.csv  valid_kpi_mapping.csv
tests/: test_fine_tune.py  test_inference.py  test_main.py  test_make_training_data_from_curator.py
