[metadata]
name = osc-transformer-based-extractor
version = 0.1.0
description = OS-Climate Data Extraction Tool
author = David Besslich
author_email = 90916810+DaBeIDS@users.noreply.github.com
license = Apache Software License
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
python_requires = >=3.9
packages = find:
install_requires =
    torch>=2.2.2
    pandas>=2.2.2
    tokenizers>=0.19.1
    ipykernel>=6.29.4
    transformers>=4.40.0
    pre-commit>=3.7.0
    pytest>=8.2.1
    pytest-cov>=5.0.0
    scikit-learn>=1.5.0
    accelerate>=0.31.0
    typer[all]>=0.12.3
    rich>=13.7.1

[options.extras_require]
dev =
    pylint
    toml
    yapf
    pdm
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    osc-transformer-based-extractor = osc_transformer_based_extractor.main:app

[options.package_data]
* = LICENSE.txt, README.rst

[tool:pytest]
testpaths = test
addopts = --cov --cov-report html --cov-report term-missing --cov-fail-under 70

[coverage:run]
source = src

[yapf]
blank_line_before_nested_class_or_def = true
column_limit = 120

[flake8]
max-line-length = 120
extend-ignore = E501

[isort]
profile = black

[black]
line-length = 120

[mypy]
ignore_missing_imports = True
explicit_package_bases = True
