[tool.poetry]
name = "osc-transformer-based-extractor"
version = "0.1.0"
description = ""
authors = ["tanishq-ids <tanishq.more@incestmentdataservices.com>"]
readme = "README.md"

[tool.poetry.scripts]
osc-transformer-based-extractor = "osc_transformer_based_extractor.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
torch = "^2.2.2"
pandas = "^2.2.2"
tokenizers = "^0.19.1"
transformers = "^4.40.0"
pre-commit = "^3.7.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
scikit-learn = "^1.5.0"
accelerate = "^0.31.0"
numpy = "^1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
